Activity and People update

--- a/Activity.html
+++ b/Activity.html
@@ -69,10 +69,16 @@
                                         </header>
                                         <ul class="link-list">
                                             <li><a href="#">Seoul National University</a></li>
+                                            <li><a href="#">Yonsei University</a></li>
                                             <li><a href="#">Korea University</a></li>
                                             <li><a href="#">Pusan National University</a></li>
                                             <!--<li><a href="#">Yonsei University</a></li>-->
                                             <li><a href="#">Chonnam National University</a></li>
+                                            <li><a href="#">Chungnam National University</a></li>
+                                            <li><a href="#">Kangwon National University</a></li>
+                                            <li><a href="#">Korea Institute of Geoscience and Mineral Resource (KIGAM)</a></li>
+                                            <li><a href="#">Korea Polar Research Institute (KOPRI)</a></li>
+                                            <li><a href="#">Korea Institute of Ocean Science and Technology (KIOST)</a></li>
                                             <li><a href="#">Universidad Nacional Autónoma de México (UNAM)</a></li>
                                             <li><a href="#">Northwestern University, USA</a></li>
                                             <li><a href="#">Peking University, China</a></li>
