--- a/People.html
+++ b/People.html
@@ -219,7 +219,7 @@
                                         <ul class="people-list">
                                             <li>
                                                 <img src="./images/people/gibackkwon.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
-                                                <p style="line-height:2em; font-size:1.1em">Kwon, Giback&nbsp&nbsp<q style="font-size:12px">B.S.</q></p>
+                                                <p style="line-height:2em; font-size:1.1em">Kwon, Ki Baek&nbsp&nbsp<q style="font-size:12px">B.S.</q></p>
                                                 <p>M.S. Student</p>
                                                 <p>gibackk96(at)gmail.com<br>
                                                 TBD</p>
@@ -247,7 +247,7 @@
                                                 <img src="./images/people/junebaek.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Baek, June&nbsp&nbsp<q style="font-size:12px">B.S.</q></p>
                                                 <p>M.S. Student</p>
-                                                <p>6benero(at)gmail.com<br>
+                                                <p>100june6(at)gmail.com<br>
                                                 TBD</p>
                                             </li>
                                         </ul>
@@ -262,6 +262,19 @@
                                                 <p>B.S. Student</p>
                                                 <p>jinojino0426(at)gmail.com<br>
                                                 Earthquake analysis</p>
+                                            </li>
+                                        </ul>
+                                    </section>
+                            </div>
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
+                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
+                                        <ul class="people-list">
+                                            <li>
+                                                <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <p style="line-height:2em; font-size:1.1em">박수희&nbsp&nbsp</p>
+                                                <p>B.S. Student, now at Kongju National University</p>
+                                                <p>suhee2308(at)gmail.com<br>
+                                                TBD</p>
                                             </li>
                                         </ul>
                                     </section>
@@ -326,7 +339,7 @@
                                                 <img src="./images/people/seongjujeong.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Jeong, SeongJu&nbsp&nbsp</p>
                                                 <p>Postdoctoral Researcher</p>
-                                                <p>Southern Methodist University</p>
+                                                <p>University of Toronto, Mississauga</p>
                                                 <p>M.S., Pukyong National University, 2013</p>
                                                 <p>Ph.D., Southern Methodist University, 2020</p>
                                             </li>
@@ -400,7 +413,8 @@
                                                 <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Lee, Heekyoung&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
                                                 <p>Officer</p>
-                                                <p>Pohang City</p>
+                                                <p>Daegu Metropolitan City</p>
+                                                <p>formerly, Pohang City</p>
                                             </li>
                                         </ul>
                                     </section>
