--- a/People.html
+++ b/People.html
@@ -166,7 +166,7 @@
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
-                                                <img src="./images/people/minogkim.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Kim, Minog&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
                                                 <p>Ph.D. Student</p>
                                                 <p>minog19(at)gmail.com<br>
@@ -231,7 +231,7 @@
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
-                                                <img src="./images/people/yujeongchoi.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Choi, Yujeong&nbsp&nbsp<q style="font-size:12px">B.S.</q></p>
                                                 <p>M.S. Student</p>
                                                 <p>chldbwjd10052(at)gmail.com<br>
@@ -272,7 +272,7 @@
                                             <li>
                                                 <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">박수희&nbsp&nbsp</p>
-                                                <p>B.S. Student, now at Kongju National University</p>
+                                                <p>B.S. Student, presently at Kongju National University</p>
                                                 <p>suhee2308(at)gmail.com<br>
                                                 TBD</p>
                                             </li>
@@ -414,7 +414,7 @@
                                                 <p style="line-height:2em; font-size:1.1em">Lee, Heekyoung&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
                                                 <p>Officer</p>
                                                 <p>Daegu Metropolitan City</p>
-                                                <p>formerly, Pohang City</p>
+                                                <p>Formerly, Pohang City</p>
                                             </li>
                                         </ul>
                                     </section>
