--- a/People.html
+++ b/People.html
@@ -234,7 +234,7 @@
                                                 <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Choi, Yujeong&nbsp&nbsp<q style="font-size:12px">B.S.</q></p>
                                                 <p>M.S. Student</p>
-                                                <p>chldbwjd10052(at)gmail.com<br>
+                                                <p><del>chldbwjd10052</del>(at)gmail.com<br>
                                                 TBD</p>
                                             </li>
                                         </ul>
