--- a/People.html
+++ b/People.html
@@ -271,6 +271,19 @@
                                         <ul class="people-list">
                                             <li>
                                                 <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <p style="line-height:2em; font-size:1.1em">이한별&nbsp&nbsp</p>
+                                                <p>B.S. Student</p>
+                                                <p>15lhstar@gmail.com<br>
+                                                TBD</p>
+                                            </li>
+                                        </ul>
+                                    </section>
+                            </div>
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
+                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
+                                        <ul class="people-list">
+                                            <li>
+                                                <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">박수희&nbsp&nbsp</p>
                                                 <p>B.S. Student, presently at Kongju National University</p>
                                                 <p>suhee2308(at)gmail.com<br>
