--- a/People.html
+++ b/People.html
@@ -283,8 +283,8 @@
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
-                                                <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
-                                                <p style="line-height:2em; font-size:1.1em">박수희&nbsp&nbsp</p>
+                                                <img src="./images/people/parksuhee.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <p style="line-height:2em; font-size:1.1em">Park, Suhee&nbsp&nbsp</p>
                                                 <p>B.S. Student, presently at Kongju National University</p>
                                                 <p>suhee2308(at)gmail.com<br>
                                                 TBD</p>
