--- a/People.html
+++ b/People.html
@@ -222,7 +222,7 @@
                                                 <p style="line-height:2em; font-size:1.1em">Kwon, Ki Baek&nbsp&nbsp<q style="font-size:12px">B.S.</q></p>
                                                 <p>M.S. Student</p>
                                                 <p>gibackk96(at)gmail.com<br>
-                                                TBD</p>
+                                                Shallow subsurface structure and site effects</p>
                                             </li>
                                         </ul>
                                     </section>
@@ -248,7 +248,7 @@
                                                 <p style="line-height:2em; font-size:1.1em">Baek, June&nbsp&nbsp<q style="font-size:12px">B.S.</q></p>
                                                 <p>M.S. Student</p>
                                                 <p>100june6(at)gmail.com<br>
-                                                TBD</p>
+                                                Crustal anisotropy and stress fields</p>
                                             </li>
                                         </ul>
                                     </section>
@@ -258,10 +258,10 @@
                                         <ul class="people-list">
                                             <li>
                                                 <img src="./images/people/jinohjung.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
-                                                <p style="line-height:2em; font-size:1.1em">Jung, Jin Oh&nbsp&nbsp</p>
-                                                <p>B.S. Student</p>
+                                                <p style="line-height:2em; font-size:1.1em">Jung, Jin Oh&nbsp&nbsp<q style="font-size:12px">B.S.</q></p>
+                                                <p>M.Ed. Student</p>
                                                 <p>jinojino0426(at)gmail.com<br>
-                                                Earthquake analysis</p>
+                                                Major in Earth Science Education, Earthquake analysis</p>
                                             </li>
                                         </ul>
                                     </section>
@@ -274,7 +274,7 @@
                                                 <p style="line-height:2em; font-size:1.1em">이한별&nbsp&nbsp</p>
                                                 <p>B.S. Student</p>
                                                 <p>15lhstar@gmail.com<br>
-                                                TBD</p>
+                                                Earthquake analysis</p>
                                             </li>
                                         </ul>
                                     </section>
@@ -287,7 +287,7 @@
                                                 <p style="line-height:2em; font-size:1.1em">Park, Suhee&nbsp&nbsp</p>
                                                 <p>B.S. Student, presently at Kongju National University</p>
                                                 <p>suhee2308(at)gmail.com<br>
-                                                TBD</p>
+                                                Earthquake analysis</p>
                                             </li>
                                         </ul>
                                     </section>
