--- a/People.html
+++ b/People.html
@@ -231,10 +231,10 @@
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
-                                                <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <img src="./images/people/choiyujeong.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Choi, Yujeong&nbsp&nbsp<q style="font-size:12px">B.S.</q></p>
                                                 <p>M.S. Student</p>
-                                                <p><del>chldbwjd10052</del>(at)gmail.com<br>
+                                                <p>yjchoi2126(at)gmail.com<br>
                                                 TBD</p>
                                             </li>
                                         </ul>
@@ -350,7 +350,7 @@
                                         <ul class="people-list">
                                             <li>
                                                 <img src="./images/people/seongjujeong.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
-                                                <p style="line-height:2em; font-size:1.1em">Jeong, SeongJu&nbsp&nbsp</p>
+                                                <p style="line-height:2em; font-size:1.1em">Jeong, SeongJu&nbsp&nbsp<q style="font-size:12px">Ph.D.</q></p>
                                                 <p>Postdoctoral Researcher</p>
                                                 <p>University of Toronto, Mississauga</p>
                                                 <p>M.S., Pukyong National University, 2013</p>
