--- a/People.html
+++ b/People.html
@@ -235,7 +235,7 @@
                                                 <p style="line-height:2em; font-size:1.1em">Choi, Yujeong&nbsp&nbsp<q style="font-size:12px">B.S.</q></p>
                                                 <p>M.S. Student</p>
                                                 <p>yjchoi2126(at)gmail.com<br>
-                                                TBD</p>
+                                                Seismicity in the eastern offshore of the Korean Peninsula</p>
                                             </li>
                                         </ul>
                                     </section>
