--- a/People.html
+++ b/People.html
@@ -270,8 +270,8 @@
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
-                                                <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
-                                                <p style="line-height:2em; font-size:1.1em">이한별&nbsp&nbsp</p>
+                                                <img src="./images/people/LeeHanByeol.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <p style="line-height:2em; font-size:1.1em">Lee, Han Byeol&nbsp&nbsp</p>
                                                 <p>B.S. Student</p>
                                                 <p>15lhstar@gmail.com<br>
                                                 Earthquake analysis</p>
