--- a/People.html
+++ b/People.html
@@ -64,7 +64,7 @@
                                     <section style="padding: 20px 10px 20px 30px;">
                                         <ul class="people-list">
                                             <li>
-                                                <img src="./images/people/tskang.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <img src="./images/people/Me_at_Daebudo_crop.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Kang, Tae-Seob&nbsp&nbsp<q style="font-size:12px">Ph.D.</q></p>
                                                 <p>Professor of Seismology & Geophysics</p>
                                                 <p>tskang(at)pknu.ac.kr<br>
