Hyunho and Eunmi update

--- a/People.html
+++ b/People.html
@@ -389,8 +389,9 @@
                                             <li>
                                                 <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Song, Geun Young&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
-                                                <p>Researcher</p>
-                                                <p>Korea Meteorological Administration (KMA)</p>
+                                                <p>Officer</p>
+                                                <p>Pohang City</p>
+                                                <p>Formerly, Researcher at Korea Meteorological Administration (KMA)</p>
                                             </li>
                                         </ul>
                                     </section>
@@ -399,7 +400,7 @@
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
-                                                <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <img src="./images/people/kimeunmi.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Kim, Eunmi&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
                                                 <p>Officer</p>
                                                 <p>Korea Meteorological Administration (KMA)</p>
@@ -411,7 +412,7 @@
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
-                                                <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <img src="./images/people/janghyunho.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Jang, Hyun Ho&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
                                                 <p>Researcher</p>
                                                 <p>Gachisolution</p>
@@ -427,7 +428,7 @@
                                                 <p style="line-height:2em; font-size:1.1em">Lee, Heekyoung&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
                                                 <p>Officer</p>
                                                 <p>Daegu Metropolitan City</p>
-                                                <p>Formerly, Pohang City</p>
+                                                <p>Formerly, Officer at Pohang City</p>
                                             </li>
                                         </ul>
                                     </section>
@@ -489,7 +490,7 @@
                                                 <p style="line-height:2em; font-size:1.1em">Cho, Sungwon&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
                                                 <p>Ph.D. Student</p>
                                                 <p>Saint Louis University</p>
-                                                <p>Researcher (2017-2018)</p>
+                                                <p>M.S., Seoul National University, 2016</p>
                                             </li>
                                         </ul>
                                     </section>
@@ -502,8 +503,7 @@
                                                 <p style="line-height:2em; font-size:1.1em">Chai, Gyeongdon&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
                                                 <p>Researcher</p>
                                                 <p>Korea Meteorological Administration (KMA)</p>
-                                                <p>cgd1605(at)gmail.com<br>
-                                                Earthquake source parameters</p>
+                                                <p>M.S., Seoul National University, 2020</p>
                                             </li>
                                         </ul>
                                     </section>
