--- a/Article.html
+++ b/Article.html
@@ -81,8 +81,11 @@
 											<h3>that <span style="color: #004d65;">geophysics@pknu</span> contributes to</h3>
 										</header>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Lim, H., Kim, Y., Kwon, K.B., Han, J., Ahn, B.S., Chai, G., Choi, Y., Heo, D., Jung, Y., Kang, H., Koh, M.H., Kwon, J., Park, J.Y., Seo, M.-S., Son, Y.O., Han, S., Kang, T.-S., Rhie, J., Kim, K.-H., Ree, J.-H. (2021). Deployment of the linear array with geophones on the fault zone of the 2016 Mw 5.5 Gyeongju
-                                                earthquake. <i>Journal of the Geological Society of Korea</i>, <b>57</b>(5), 741-746. <a href="https://doi.org/10.14770/jgsk.2021.57.5.741" target="_blank">doi:10.14770/jgsk.2021.57.5.741</a>
+                                            <li class="publication">Seo, M.-S., Son, Y.O., Kim, Y., Kang, T.-S., Rhie, J., Kim, K.-H., Ree, J.-H. (2021). Measurement of seismometer misorientation based on P–wave polarization: application to dense temporary broadband seismic array in the epicentral region of 2016 Gyeongju earthquake, South Korea. <i>Geosciences Journal</i>, <b>**</b>(*), ***-***. <a href="https://doi.org/doi:10.1007/s12303-***-****-*" target="_blank">doi:10.1007/s12303-***-****-*</a> (accepted in 18 Dec. 2021)
+                                            </li>
+                                        </ul>
+                                        <ul class="link-list last-child">
+                                            <li class="publication">Lim, H., Kim, Y., Kwon, K.B., Han, J., Ahn, B.S., Chai, G., Choi, Y., Heo, D., Jung, Y., Kang, H., Koh, M.H., Kwon, J., Park, J.Y., Seo, M.-S., Son, Y.O., Han, S., Kang, T.-S., Rhie, J., Kim, K.-H., Ree, J.-H. (2021). Deployment of the linear array with geophones on the fault zone of the 2016 Mw 5.5 Gyeongju earthquake. <i>Journal of the Geological Society of Korea</i>, <b>57</b>(5), 741-746. <a href="https://doi.org/10.14770/jgsk.2021.57.5.741" target="_blank">doi:10.14770/jgsk.2021.57.5.741</a>
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
