--- a/Media.html
+++ b/Media.html
@@ -82,7 +82,19 @@
 										</header>
                                         <ul class="link-list last-child">
                                             <li class="publication">
+                                                동아사이언스 기사, 2021.11.18. <a href="https://www.dongascience.com/news.php?idx=50632">원전 지진 안전성 평가하는 '소프트웨어' 개발</a>
+                                            </li>
+                                            <li class="publication">
+                                                동아사이언스 기사, 2021.09.14. <a href="https://www.dongascience.com/news.php?idx=49306">[과학게시판]14일 '경주지진 이후: 무엇이 어떻게 달라졌나' 포럼 外</a>
+                                            </li>
+                                            <li class="publication">
+                                                동아사이언스 기사, 2021.06.02. <a href="https://www.dongascience.com/news.php?idx=37128">해남서 한달 새 75차례 발생한 지진 "대규모 지진 전조 아냐"</a>
+                                            </li>
+                                            <li class="publication">
                                                 한국일보 기고, 2020.06.22. <a href="https://www.hankookilbo.com/News/Read/A202006191431000054?did=NA">지나친 기우가 부르는 지진 불안감</a>
+                                            </li>
+                                            <li class="publication">
+                                                동아사이언스 기사, 2019.10.08. <a href="https://www.dongascience.com/news.php?idx=31623">"9월 포항서 일어난 규모 2.3 지진은 포항지진 여진"</a>
                                             </li>
                                             <li class="publication">
                                                 JTBC 인터뷰, 2017.11.16. <a href="https://news.jtbc.joins.com/article/article.aspx?news_id=NB11550675">[인터뷰] 강태섭 교수 "경주 지진 여파? 인과 관계 단정짓기 어려워"</a>
