Update room 420 and Euna

--- a/People.html
+++ b/People.html
@@ -449,7 +449,7 @@
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
-                                                <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <img src="./images/people/parkeuna.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Park, Euna&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
                                                 <p>Researcher</p>
                                                 <p>Korea Meteorological Administration (KMA)</p>
@@ -564,7 +564,7 @@
                                                     Department of Earth and Environmental Sciences<br>
                                                     Pukyong National University<br>
                                                 </li>
-                                                <li><a href="http://naver.me/GLKQW2S5" target="_blank"><span style="color: #004d65;">Room #427, Environment & Ocean College Buiding (B14)<br>
+                                                <li><a href="http://naver.me/GLKQW2S5" target="_blank"><span style="color: #004d65;">Room #420, Environment & Ocean College Buiding (B14)<br>
                                                     Pukyong National University (Daeyeon Campus)<br>
                                                     45 Yongso-ro, Nam-gu, Busan 48513<br>
                                                     Republic of Korea</span></a></li>
