--- a/Conference.html
+++ b/Conference.html
@@ -84,6 +84,9 @@
                                             <li class="publication">
                                                 Kang, T.-S. (2020). Integrated monitoring system of the Pohang EGS site. <i>2020 International Forum on Pohang Earthquake: Advancing Understanding through Study of the Pohang Earthquake</i>, POSCO International Center (offline) and <a href="http://www.pohangeq.or.kr/2020/" target="_blank">online</a>, November 11-14, 2020.
                                             </li>
+                                            <li class="publication">
+                                                Kanl&#305;, A.I., Kang, T.-S., P&#305;nar, A., Tildy, P., Pr&#243;nay, Z. (2008). Combination of active (MASW) and passive (microtremor) source based geophysical approach. <i>Near Surface 2008 - 14th EAGE European Meeting of Environmental and Engineering Geophysics</i>, Krak&#243;w, Poland, September 15-17, 2008. <a href="https://doi.org/10.3997/2214-4609.20146225" target="_blank">doi:10.3997/2214-4609.20146225</a>
+                                            </li>
                                         </ul>
 									</section>
 							</div>
