--- a/Book.html
+++ b/Book.html
@@ -82,28 +82,27 @@
 										</header>
                                         <ul class="link-list last-child">
                                             <li class="publication">
-                                                이주희, 강태섭, 박용안, 김맹기, 이융남, 장순근, 홍성욱, 이용삼, 차형기, 최창조, 이상해 (2012). 인류문명, 자연과 공존하다. 국립제주박물관 문화총서 11, 서경문화사, ISBN 987-89-6062-091-9 (04380). <a href="https://doi.org/10.978.896062/0919">doi:10.978.896062/0919</a>
+                                                이주희, 강태섭, 박용안, 김맹기, 이융남, 장순근, 홍성욱, 이용삼, 차형기, 최창조, 이상해 (2012). 인류문명, 자연과 공존하다. 국립제주박물관 문화총서 11, 서경문화사, ISBN 987-89-6062-091-9 (04380). <a href="https://doi.org/10.978.896062/0919" target="_blank">doi:10.978.896062/0919</a>
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
                                             <li class="publication">
-                                                최정찬, 강태섭, 강희철, 김선옥, 김영석, 박계헌, 백인성, 송용선, 이민희, 정상용 (2012). 지구환경과학. (주)시그마프레스, ISBN 978-89-97927-07-4. [원서: AGI, NAGT, Hudson, T. (2011). Living with Earth: An Introduction to Environmental Geology, 1st ed., Pearson Education, Inc., ISBN 0131424475]. <a href="https://doi.org/10.978.8997927/074">doi:10.978.8997927/074</a>
+                                                최정찬, 강태섭, 강희철, 김선옥, 김영석, 박계헌, 백인성, 송용선, 이민희, 정상용 (2012). 지구환경과학. (주)시그마프레스, ISBN 978-89-97927-07-4. [원서: AGI, NAGT, Hudson, T. (2011). Living with Earth: An Introduction to Environmental Geology, 1st ed., Pearson Education, Inc., ISBN 0131424475]. <a href="https://doi.org/10.978.8997927/074" target="_blank">doi:10.978.8997927/074</a>
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
                                             <li class="publication">
-                                                김기영, 강태섭, 김영화, 김지수, 김형수, 민동주, 변중무, 신동훈, 오석훈 (2014). 지구물리탐사 개론. (주)시그마프레스, ISBN 978-89-6866-140-2. [원서: Mussett, A. E., Khan, M. A. (2000). Looking into the Earth: An Introduction to Geological Geophysics, Cambridge University Press, ISBN 9780511810305]. <a href="https://doi.org/10.978.896866/1402">doi:10.978.896866/1402</a>
-                                            </li>
-
-                                        </ul>
-                                        <ul class="link-list last-child">
-                                            <li class="publication">
-                                                이은희, 강태섭, 홍희범, 이충환, 서금영, 이영혜, 송준섭, 강석기, 김정, 이억주, 유범재 (2017). 미래를 읽다 과학이슈 11 Season 5. (주)동아엠앤비, ISBN 979-11-87336-33-4 (04400). <a href="https://doi.org/10.979.1187336/334">doi:10.979.1187336/334</a>
+                                                김기영, 강태섭, 김영화, 김지수, 김형수, 민동주, 변중무, 신동훈, 오석훈 (2014). 지구물리탐사 개론. (주)시그마프레스, ISBN 978-89-6866-140-2. [원서: Mussett, A. E., Khan, M. A. (2000). Looking into the Earth: An Introduction to Geological Geophysics, Cambridge University Press, ISBN 9780511810305]. <a href="https://doi.org/10.978.896866/1402" target="_blank">doi:10.978.896866/1402</a>
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
                                             <li class="publication">
-                                                이준기, 강태섭, 양인재, 김유성, 우정웅, 김주환, 김민욱, 허다빈, 박제헌, 이승아, 박주현, 김수로, 김중열, 권성일, 정재훈, 권형일 (2017). 미소지진 모니터링 설계, 자료 취득 및 자료 분석. 명문인쇄공사, ISBN <a href="http://seoji.nl.go.kr/landingPage?isbn=9788993378665">978-89-93378-66-5</a> (93500).
+                                                이은희, 강태섭, 홍희범, 이충환, 서금영, 이영혜, 송준섭, 강석기, 김정, 이억주, 유범재 (2017). 미래를 읽다 과학이슈 11 Season 5. (주)동아엠앤비, ISBN 979-11-87336-33-4 (04400). <a href="https://doi.org/10.979.1187336/334" target="_blank">doi:10.979.1187336/334</a>
+                                            </li>
+                                        </ul>
+                                        <ul class="link-list last-child">
+                                            <li class="publication">
+                                                이준기, 강태섭, 양인재, 김유성, 우정웅, 김주환, 김민욱, 허다빈, 박제헌, 이승아, 박주현, 김수로, 김중열, 권성일, 정재훈, 권형일 (2017). 미소지진 모니터링 설계, 자료 취득 및 자료 분석. 명문인쇄공사, ISBN <a href="http://seoji.nl.go.kr/landingPage?isbn=9788993378665" target="_blank">978-89-93378-66-5</a> (93500).
                                             </li>
                                         </ul>
 									</section>
