--- a/People.html
+++ b/People.html
@@ -365,7 +365,7 @@
                                             <li>
                                                 <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Park, Jechan&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
-                                                <p>Researcher</p>
+                                                <p>Senior Researcher</p>
                                                 <p>KEPCO E&C</p>
                                             </li>
                                         </ul>
@@ -377,7 +377,7 @@
                                             <li>
                                                 <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Kim, Minook&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
-                                                <p>Researcher</p>
+                                                <p>Senior Researcher</p>
                                                 <p>Korea Institute of Nuclear Safety (KINS)</p>
                                             </li>
                                         </ul>
