--- a/KangTaeSeob_CV.html
+++ b/KangTaeSeob_CV.html
@@ -115,7 +115,7 @@
                                         2018-2021, Earthquake and Vocano Disaster Mitigation Policy Committee, Busan Metropolitan City<br>
                                         2018-2021, Review Board, National Research Foundation of Korea<br>
                                         2020-2021, The Pohang Earthquake Investigation Committee, The Prime Minister<br>
-                                        2020-2021, Advisory Committee, Korea Institute of Nuclea Safety
+                                        2020-2021, Advisory Committee, Korea Institute of Nuclea Safety<br>
                                         2020-2023, Earthquake Disaster Investigation Committee, Ulsan Metropolitan City<br>
                                         2020-2023, Earthquake Advisory Committee, Pohang City<br>
                                     </section>
