--- a/Article.html
+++ b/Article.html
@@ -81,7 +81,11 @@
 											<h3>that <span style="color: #004d65;">geophysics@pknu</span> contributes to</h3>
 										</header>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Seo, M.-S., Son, Y.O., Kim, Y., Kang, T.-S., Rhie, J., Kim, K.-H., Ree, J.-H. (2021). Measurement of seismometer misorientation based on P–wave polarization: application to dense temporary broadband seismic array in the epicentral region of 2016 Gyeongju earthquake, South Korea. <i>Geosciences Journal</i>, <b>**</b>(*), ***-***. <a href="https://doi.org/doi:10.1007/s12303-***-****-*" target="_blank">doi:10.1007/s12303-***-****-*</a> (accepted in 18 Dec. 2021)
+                                            <li class="publication">Kang, T.-S., Kong, C., Yoo, H.J. (2022). Analysis of man-made signals recorded at a temporary seismograph station at the Jang Bogo Station, Terra Nova Bay, Antarctica. <i>Journal of the Geological Society of Korea</i>, <b>**</b>(*), ***-***. <a href="https://doi.org/doi:10.14770/jgsk.****.**.*.***" target="_blank">doi:10.14770/jgsk.****.**.*.***</a> (in Korean with English abstract)(under review)
+                                            </li>
+                                        </ul>
+                                        <ul class="link-list last-child">
+                                            <li class="publication">Seo, M.-S., Son, Y.O., Kim, Y., Kang, T.-S., Rhie, J., Kim, K.-H., Ree, J.-H. (2021). Measurement of seismometer misorientation based on <i>P</i>–wave polarization: application to dense temporary broadband seismic array in the epicentral region of 2016 Gyeongju earthquake, South Korea. <i>Geosciences Journal</i>, <b>**</b>(*), ***-***. <a href="https://doi.org/doi:10.1007/s12303-021-0041-3" target="_blank">doi:10.1007/s12303-021-0041-3</a> (in press)
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
