--- a/Article.html
+++ b/Article.html
@@ -81,7 +81,7 @@
 											<h3>that <span style="color: #004d65;">geophysics@pknu</span> contributes to</h3>
 										</header>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Kang, T.-S., Kong, C., Yoo, H.J. (2022). Analysis of man-made signals recorded at a temporary seismograph station at the Jang Bogo Station, Terra Nova Bay, Antarctica. <i>Journal of the Geological Society of Korea</i>, <b>**</b>(*), ***-***. <a href="https://doi.org/doi:10.14770/jgsk.****.**.*.***" target="_blank">doi:10.14770/jgsk.****.**.*.***</a> (in Korean with English abstract)(under review)
+                                            <li class="publication">Kang, T.-S., Kong, C., Yoo, H.J. (2022). Analysis of man-made signals recorded at a temporary seismograph station at the Jang Bogo Station, Terra Nova Bay, Antarctica. <i>Journal of the Geological Society of Korea</i>, <b>58</b>(1), ***-***. <a href="https://doi.org/doi:10.14770/jgsk.2022.58.1.***" target="_blank">doi:10.14770/jgsk.2022.58.1.***</a> (in Korean with English abstract)(in press)
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
