--- a/People.html
+++ b/People.html
@@ -115,7 +115,7 @@
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
-                                                <img src="./images/people/hangil.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <img src="./images/people/KimHangil.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Kim, Hangil&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
                                                 <p>Researcher, Administrator</p>
                                                 <p>seedwhite(at)gmail.com<br>
