--- a/Article.html
+++ b/Article.html
@@ -81,11 +81,11 @@
 											<h3>that <span style="color: #004d65;">geophysics@pknu</span> contributes to</h3>
 										</header>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Kang, T.-S., Kong, C., Yoo, H.J. (2022). Analysis of man-made signals recorded at a temporary seismograph station at the Jang Bogo Station, Terra Nova Bay, Antarctica. <i>Journal of the Geological Society of Korea</i>, <b>58</b>(1), ***-***. <a href="https://doi.org/doi:10.14770/jgsk.2022.58.1.***" target="_blank">doi:10.14770/jgsk.2022.58.1.***</a> (in Korean with English abstract)(in press)
+                                            <li class="publication">Seo, M.-S., Son, Y.O., Kim, Y., Kang, T.-S., Rhie, J., Kim, K.-H., Ree, J.-H. (2022). Measurement of seismometer misorientation based on <i>P</i>–wave polarization: application to dense temporary broadband seismic array in the epicentral region of 2016 Gyeongju earthquake, South Korea. <i>Geosciences Journal</i>, <b>**</b>(*), ***-***. <a href="https://doi.org/doi:10.1007/s12303-021-0041-3" target="_blank">doi:10.1007/s12303-021-0041-3</a> (in press)
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Seo, M.-S., Son, Y.O., Kim, Y., Kang, T.-S., Rhie, J., Kim, K.-H., Ree, J.-H. (2022). Measurement of seismometer misorientation based on <i>P</i>–wave polarization: application to dense temporary broadband seismic array in the epicentral region of 2016 Gyeongju earthquake, South Korea. <i>Geosciences Journal</i>, <b>**</b>(*), ***-***. <a href="https://doi.org/doi:10.1007/s12303-021-0041-3" target="_blank">doi:10.1007/s12303-021-0041-3</a> (in press)
+                                            <li class="publication">Kang, T.-S., Kong, C., Yoo, H.J. (2022). Analysis of man-made signals recorded at a temporary seismograph station at the Jang Bogo Station, Terra Nova Bay, Antarctica. <i>Journal of the Geological Society of Korea</i>, <b>58</b>(1), 67-81. <a href="https://doi.org/doi:10.14770/jgsk.2022.58.1.67" target="_blank">doi:10.14770/jgsk.2022.58.1.67</a> (in Korean with English abstract)
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
